[package]
name = "update_rate"
version = "2.0.0"
authors = ["SilverWingedSeraph <lfstindall@gmail.com>"]
description = "A generic, low-overhead rate counter for FPS counters and the like."
repository = "https://github.com/SilverWingedSeraph/update_rate"
documentation = "https://docs.rs/update_rate"
keywords = ["time", "rate", "game", "sensor", "instrumentation"]
categories = ["date-and-time", "development-tools::profiling", "games", "game-engines"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "SilverWingedSeraph/update_rate", branch = "master" }

[dependencies]
