[package]
name = "update_rate"
version = "2.0.1"
authors = ["Leonora Tindall <nora@nora.codes>"]
description = "A generic, low-overhead rate counter for FPS counters and the like."
edition = "2018"
repository = "https://github.com/NoraCodes/update_rate"
documentation = "https://docs.rs/update_rate"
keywords = ["time", "rate", "game", "sensor", "instrumentation"]
categories = ["date-and-time", "development-tools::profiling", "games", "game-engines"]
license = "MIT"
readme = "README.md"

[badges]
travis-ci = { repository = "SilverWingedSeraph/update_rate", branch = "master" }

[dependencies]
